--- a/numpy/2장/numpy_chapter_2_1_4.ipynb
+++ b/numpy/2장/numpy_chapter_2_1_4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
        "'2.0.1'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
        "array([3, 4])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 9, 16])"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "v_p"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +114,7 @@
        "np.float64(5.0)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +141,7 @@
        "np.float64(5.0)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +161,7 @@
        "np.float64(5.0)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +197,7 @@
        "(6, 10)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +247,7 @@
        "np.float64(1.0)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +276,7 @@
        "np.float64(1.0)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +305,7 @@
        "np.float64(1.0)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +350,7 @@
        "np.float64(3.7416573867739413)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +386,7 @@
        "array([0.26726124, 0.53452248, 0.80178373])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +406,7 @@
        "np.float64(1.0)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -404,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +468,7 @@
        "array([0.18257419, 0.36514837, 0.54772256, 0.73029674])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -459,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +488,7 @@
        "np.float64(0.9999999999999999)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -479,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -488,7 +508,7 @@
        "np.float64(1.0)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
