--- a/numpy/2장/numpy_chapter_2_2_1.ipynb
+++ b/numpy/2장/numpy_chapter_2_2_1.ipynb
@@ -17,7 +17,7 @@
     {
      "data": {
       "text/plain": [
-       "'1.18.2'"
+       "'2.0.1'"
       ]
      },
      "execution_count": 2,
@@ -42,6 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 2개의 차원\n",
     "A  = np.array([[43],[44]])"
    ]
   },
@@ -101,7 +102,7 @@
     {
      "data": {
       "text/plain": [
-       "dtype('int32')"
+       "dtype('int64')"
       ]
      },
      "execution_count": 6,
@@ -166,6 +167,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# tuple type을 만듦 \n",
     "shape = (3,4)"
    ]
   },
@@ -197,7 +199,7 @@
       "text/plain": [
        "array([[7, 7, 7, 7],\n",
        "       [7, 7, 7, 7],\n",
-       "       [7, 7, 7, 7]], dtype=int64)"
+       "       [7, 7, 7, 7]])"
       ]
      },
      "execution_count": 12,
@@ -211,10 +213,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[10, 10, 10, 10, 10, 10, 10],\n",
+       "       [10, 10, 10, 10, 10, 10, 10],\n",
+       "       [10, 10, 10, 10, 10, 10, 10],\n",
+       "       [10, 10, 10, 10, 10, 10, 10],\n",
+       "       [10, 10, 10, 10, 10, 10, 10],\n",
+       "       [10, 10, 10, 10, 10, 10, 10],\n",
+       "       [10, 10, 10, 10, 10, 10, 10],\n",
+       "       [10, 10, 10, 10, 10, 10, 10],\n",
+       "       [10, 10, 10, 10, 10, 10, 10],\n",
+       "       [10, 10, 10, 10, 10, 10, 10]])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#사이즈\n",
+    "np.full((10,7),10,np.int_)"
+   ]
   },
   {
    "cell_type": "code",
@@ -240,7 +265,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
